fix: correct typo in home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </p>
           <hr class="mt-10"> <hr> <hr>
           <blockquote class="mt-8 md:mt-10 italic text-sm md:text-base lg:text-[17px]">
-            "Kita usahakan 7 puncak tertinggi Indonesia dari salju abadi Carstensz Pyramid hingga rimba liar Bukit Raya."
+            "Kita usahakan 7 puncak tertinggi Indonesia dari rimba liar Bukit Raya hingga salju abadi Carstensz Pyramid."
           </blockquote>
         </div>
       </div>
